# nope-django

./: .gitignore  Dockerfile  Makefile  README.md  dev.env  dev.yml  docker-compose.yml  env.example  manage.py  prod.env  pyproject.toml  setup.cfg
confs/: nginx.conf
lib/aliyun/: sms.py  vod_player.py
lib/aliyun/oss/: storage.py
lib/aliyunsms/sdk/aliyun-python-sdk-core/tests/: test_client.py
nope/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
nope/accounts/: __init__.py  apps.py  models.py  serializers.py  signals.py  views.py
nope/accounts/management/commands/: add_admin.py
nope/core/: auth.py  errcodes.py  errors.py  exception_handler.py  exceptions.py  models.py  permissions.py
nope/demo/: apps.py  models.py  serializers.py  views.py
nope/util/: oss.py  smstool.py
