[tool.poetry]
name = "nope"
version = "0.1.0"
description = ""
authors = ["GWM <403052870@qq.com>"]

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.4"
mysqlclient = { version = "^2.0.1", optional = true }
django-environ = "^0.4.5"
djangorestframework = "^3.12.2"
django-filter = "^2.4.0"
eventlet = "^0.30.0"
gunicorn = "^20.0.4"
djangorestframework-simplejwt = "^4.6.0"
django-oss-storage = "^1.1.1"
celery = "^5.0.5"
redis = "^3.5.3"
gevent = "^21.1.2"
django-redis = "^5.2.0"
django-currentuser = "^0.5.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
flake8 = "^3.8.4"
drf-yasg = "^1.20.0"
pytest-django = "^4.1.0"
factory-boy = "^3.2.0"
pytest-cov = "^2.11.1"

[tool.poetry.extras]
db = ["mysqlclient"]

[build-system]
requires = ["poetry-core>=1.0.0"]